fixed alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,7 +449,9 @@ header {
 }
 
 
-
+.con1-sec{
+    margin: 0 124px 176px 77px;
+}
 .con2-sec {
     margin: 0 150px 137px;
 }
